--- a/Java测开学习/html/0902/sphWeb/css/Index.css
+++ b/Java测开学习/html/0902/sphWeb/css/Index.css
@@ -62,6 +62,14 @@
     color: #EA4A36;
     /* cup tab键 */
     cursor: pointer;
+    /* 相对定位 */
+    position: relative;
+}
+
+.logoAndSearch-center .baby li img{
+    position: absolute;
+    left: 20px;
+    top: -20px;
 }
 
 .logoAndSearch-center .baby .current{
@@ -332,10 +340,15 @@
 .menu .ticket-list ul li{
     padding: 0 15px;
 }
-.menu .ticket-list ul li a{
+.menu .ticket .ticket-list ul li a{
     display: block;
     height: 82px;
 }
+
+.menu .ticket-list ul li a:hover h4,em{
+    color: red !important;
+}
+
 .menu .ticket-list ul li a .circle{
     width: 66px;
     height: 66px;
@@ -365,13 +378,7 @@
     color: #333;
     margin-top: 6px;
 }
-/* .menu .ticket-list ul li a .gd{
-    float: right;
-    width: 42px;
-    height: 87px;
-    margin: 9px 11px 0 27px;
-} */
-.menu .ticket-list ul li a .gd h4{
+.menu .ticket-list ul li a h4{
     float: left;
     width: 12px;
     color: #666;
@@ -379,16 +386,11 @@
     margin-top: 13px;
     margin-left: 27px;
 }
-
-.menu .ticket-list ul li a .gd em{
+.menu .ticket-list ul li a em{
     float: left;
     margin: 33px 0 0 9px;
     color: #666;
 }
-.menu .ticket-list ul li a:hover{
-    color: red;
-}
-
 
 
 
