--- a/Java测开学习/html/0902/sphWeb/css/login.css
+++ b/Java测开学习/html/0902/sphWeb/css/login.css
@@ -184,8 +184,8 @@ body {
     text-align: center;
     float: left;
 }
-.login-wrap .login-bg .login .box ul li a{
-    display: block;
+.login-wrap .login-bg .login .box>ul li a{
+    float: left;
     width: 188px;
 }
 .login-wrap .login-bg .login .box ul .bk{
@@ -207,6 +207,7 @@ body {
     width: 34px;
     height: 30px;
     line-height: 30px;
+    font-size: 24px;
     border: #CCCCCC solid 1px;
     float: left;
     text-align: center;
@@ -220,10 +221,39 @@ body {
     color: #CCCCCC;
     float: left;
 }
-
 .login-wrap .login-bg .login .box .pwd-input{
     margin-top: 15px;
 }
+.login-wrap .login-bg .login .box .state{
+    margin: 12px 0 0 18px;
+}
+.login-wrap .login-bg .login .box .state p{
+    float: left;
+    font-size: 16px;
+}
+.login-button button{
+    width: 336px;
+    height: 30px;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin: 28px 0 32px 18px;
+    background-color: #E93854;
+}
+.thirdParty-Login li a{
+    float: left;
+    font-size: 36px;
+    margin-right: 12px;
+}
+.thirdParty-Login li a:hover{
+    border-top: #28A3EF solid 1px;
+}
+.thirdParty-Login p a{
+    font-size: 14px;
+    line-height: 46px;
+    margin-right: 18px;
+}
+
+
 
 
 
