--- a/Java测开学习/html/0902/sphWeb/font_icon/iconfont.css
+++ b/Java测开学习/html/0902/sphWeb/font_icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3442270 */
-  src: url('iconfont.woff2?t=1654005494781') format('woff2'),
-       url('iconfont.woff?t=1654005494781') format('woff'),
-       url('iconfont.ttf?t=1654005494781') format('truetype');
+  src: url('iconfont.woff2?t=1654091912405') format('woff2'),
+       url('iconfont.woff?t=1654091912405') format('woff'),
+       url('iconfont.ttf?t=1654091912405') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,34 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xuanzhong:before {
+  content: "\e626";
+}
+
+.icon-xinlangweibo:before {
+  content: "\e600";
+}
+
+.icon-weixin:before {
+  content: "\e601";
+}
+
+.icon-shoujihao:before {
+  content: "\e642";
+}
+
+.icon-QQ-circle-fill:before {
+  content: "\e887";
+}
+
+.icon-mima1:before {
+  content: "\e726";
+}
+
+.icon-zhifubao:before {
+  content: "\e607";
 }
 
 .icon-zhanghao:before {
